# shadow

./: CMakeLists.txt  test_getdef.c
lib/: alloc.h  attr.h  defines.h  getdef.c  getdef.h  getlong.c  getulong.c  must_be.h  prototypes.h  sizeof.h
lib/atoi/: a2i.c  a2i.h  str2i.c  str2i.h  strtoi.c  strtoi.h  strtou_noneg.c  strtou_noneg.h
lib/string/: sprintf.h
